--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:title" content="Diana Vázquez | Diseño Gráfico & Web" />
+    <meta property="og:description" content="Diana Vázquez - Portafolio" />
+    <meta name="description" content="Diana Vázquez - Portafolio">
+    <meta property="og:url" content="https://dianix.github.io/" />
+    <meta property="og:image" content="assets/imgs/grulla.png">
+    <meta name="author" content="D.C.G. Diana Vázquez">
     <title>Diana Vázquez</title>
     <link rel="shorcut icon" type="image/x-icon" href="assets/imgs/grulla.png" />
     <!-- UIkit CSS -->
@@ -43,8 +49,8 @@
     <main id="home" class="uk-grid uk-grid-small uk-grid uk-child-width-1-1@s uk-child-width-1-2@m uk-padding-small" uk-scrollspy="target: > div; cls:uk-animation-fade; delay: 500">
         <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
             <h1 id="nombre" class="uk-margin-medium-top uk-heading-primary t-uva asap-b">Diana Vázquez</h1>
-            <h2 id="profesion" class="uk-margin-remove t-g-azul julius">Front End <span class="t-uva asap-r">&</span> Diseño</h2>
-            <a target="_blank" class="uk-button uk-button-danger uk-margin-medium-top uk-margin-medium-bottom" href="./assets/docs/CVDianaVazquez.pdf">Ver Curriculum</a>
+            <h2 id="profesion" class="uk-margin-remove t-g-azul julius">Frontend <span class="t-uva asap-r">&</span> Diseño</h2>
+            <a target="_blank" class="uk-button uk-button-danger uk-margin-medium-top uk-margin-medium-bottom" href="./assets/docs/DianaVazquezDiseño.pdf">Ver Curriculum</a>
         </div>
         <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
 
@@ -52,7 +58,7 @@
                 <div class="uk-inline-clip uk-transition-toggle">
                     <a><img id="mifoto" src="assets/imgs/yop.jpg" class="uk-border-circle" alt="Diana V."></a>
                     <div class="uk-flex uk-flex-center uk-padding uk-flex-middle">
-                        <p class="uk-padding-small"> <span class="t-uva uk-text-lead">¡Hola!</span> Soy Diseñadora gráfica & Front End developer<br> Mi experiencia trabajando con JavaScript, HTML5, CSS3, Vue.js y otras herramientas, es de casi 3 años. También me he desempeñado en áreas de diseño como museografía, editorial y edición de imágenes.<br> Me encanta la caligrafía, lettering y fotografía.</p>
+                        <p class="uk-padding-small"> <span class="t-uva uk-text-lead">¡Hola!</span> Soy Diseñadora gráfica & Frontend developer<br>Me he desempeñado en áreas de diseño como museografía, editorial, logotipos y edición de imágenes. Mi experiencia trabajando en desarrollo web con herramientas como JavaScript, HTML5, CSS3, Vue.js y otras, es de casi 3 años.<br> Me encanta la caligrafía, lettering y fotografía.</p>
                     </div>
                 </div>
             </div>
@@ -198,7 +204,7 @@
                         <img src="assets/imgs/proyectos/osmexico.png" alt="OS México">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>OS México</b></h3>
-                            <p class="">Maquetación y funcionalidad de sitio y aplicación web dentro de ambiente laravel, para empresa comercializadora de espectaculares, con base en diseño proporcionado (código privado).<br>
+                            <p class="">Maquetación y funcionalidad de sitio y aplicación web dentro de ambiente laravel, para empresa comercializadora de espectaculares.</p>
                             <div>
                                 <a target="_blank" href="https://osmexico.mx/" uk-icon="icon: desktop; ratio:2"></a>
                             </div>
@@ -210,7 +216,7 @@
                         <img src="assets/imgs/proyectos/cw.png" alt="Criminal Wings">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Criminal Wings</b></h3>
-                            <p class="">Maquetación y funcionalidad de sitio web dentro de ambiente laravel, para cadena de alitas, con base en diseño proporcionado (código privado).</p><br>
+                            <p class="">Maquetación y funcionalidad de sitio web dentro de ambiente laravel, para cadena de alitas.</p>
                             <div>
                                 <a target="_blank" href="http://release.criminalwings.mx/" uk-icon="icon: desktop; ratio:2"></a>
                             </div>
@@ -222,7 +228,7 @@
                         <img src="assets/imgs/proyectos/icowork.png" alt="iCowork">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>iCowork</b></h3>
-                            <p class="">Diseño, maquetación y funcionalidad de sitio web, para empresa de coworking, (código privado).</p><br>
+                            <p class="">Diseño, maquetación y funcionalidad de sitio web, para empresa de coworking.</p>
                             <div>
                                 <a target="_blank" href="https://icowork.com.mx/" uk-icon="icon: desktop; ratio:2"></a>
                             </div>
@@ -234,7 +240,7 @@
                         <img src="assets/imgs/proyectos/crowdbotics.png" alt="crowdbotics">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Crowdbotics - Product planner</b></h3>
-                            <p class="">Propuesta de herramienta web para facilitar a los clientes la descripción del producto que desean desarrollar. <b>Proyecto ganador en hackaton Talent Fest Laboratoria 2017.</b></p><br>
+                            <p class="">Propuesta de herramienta web para facilitar a los clientes la descripción del producto que desean desarrollar. <b>Proyecto ganador en hackaton Talent Fest Laboratoria 2017.</b></p>
                             <div>
                                 <a target="_blank" href="https://fast-beyond-92213.herokuapp.com/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/product-planner" uk-icon="icon: github-alt; ratio:2"></a>
@@ -261,7 +267,7 @@
                         <img src="assets/imgs/proyectos/lyft.png" alt="lyft">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class=" uk-margin-small uk-margin-remove"><b>Lyft</b></h3>
-                            <p class="">Maquetación de landing page con flexbox.</p><br>
+                            <p class="">Ejercicio de maquetación de landing page con flexbox.</p><br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/lyft/index.html" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/lyft" uk-icon="icon: github-alt; ratio:2"></a>
@@ -269,7 +275,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="proyec uk-text-center">
+                <!-- <div class="proyec uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/antojitos.mx.png" alt="antojitosmx">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
@@ -281,7 +287,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="proyec uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/pokedex.png" alt="pokedex">
@@ -306,6 +312,48 @@
         </div>
         <div class="uk-margin-medium-top">
             <div class="uk-child-width-1-3@m uk-grid-collapse" uk-grid uk-scrollspy="cls: uk-animation-scale-up; target: .diseno; delay: 500; repeat: true">
+                <div class="diseno">
+                    <div class="uk-card uk-card-default uk-margin-left uk-margin-right">
+                        <div class="uk-text-center">
+                            <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                                <img src="assets/imgs/diseno/jalisco01.jpg" alt="">
+                                <img src="assets/imgs/diseno/jalisco02.jpg" alt="" class="uk-transition-fade uk-position-cover">
+                            </div>
+                        </div>
+                        <div class="uk-card-body">
+                            <h3 class="uk-card-title">Museo Palacio de Gobierno Jalisco</h3>
+                            <p>Branding, promocionales, gráficas de sala.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="diseno">
+                    <div class="uk-card uk-card-default uk-margin-left uk-margin-right">
+                        <div class="uk-text-center">
+                            <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                                <img src="assets/imgs/diseno/normalismo01.jpg" alt="">
+                                <img src="assets/imgs/diseno/normalismo02.jpg" alt="" class="uk-transition-fade uk-position-cover">
+                            </div>
+                        </div>
+                        <div class="uk-card-body">
+                            <h3 class="uk-card-title">Museo del Normalismo</h3>
+                            <p>Branding, merchandising, gráficas de salas.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="diseno">
+                    <div class="uk-card uk-card-default uk-margin-left uk-margin-right">
+                        <div class="uk-text-center">
+                            <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                                <img src="assets/imgs/diseno/durango01.jpg" alt="">
+                                <img src="assets/imgs/diseno/durango02.jpg" alt="" class="uk-transition-fade uk-position-cover">
+                            </div>
+                        </div>
+                        <div class="uk-card-body">
+                            <h3 class="uk-card-title">Recetario Cocina Duranguense</h3>
+                            <p>Ilustración, diseño editorial.</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="diseno">
                     <div class="uk-card uk-card-default uk-margin-left uk-margin-right">
                         <div class="uk-text-center">
